# junkcode

./: .gitignore  README.md  Test44.java  t001.html  t004.c  t006.c  t015.c  t016.py  t017.c  t019.c  t02.c  t020.c  t021.c  t022.py  t025.c  t026.c  t027.c  t028.c  t029.c  t03.c  t032.c  t033.c  t035.htm  t037.c  t039.sh  t041.java  t042.c  t043.c  t044.java  t046.c  t05.c  t052.go  t056.c  t057.c  t058.sh  t059.sh  t064.sh  t07.c  t070.sh  t072.go  (+104 more)
t048/: t48a.py
t050/: nl-ks.c  nl-us.c
t051/: tester.go
t053/: Makefile  t53-timed.c
t065/: README.md  tchild.sh
t066/: tparent.sh
t067/: README.md  toldpar.sh  tpar.sh
t075/: ptr.c  ptr.go
t080/: t80a.py  t80b.py
t082/: srvlookup.py  t82.py
t083/: myapp.py  requirements.txt  wsgi.py
t086/: client.py
t094/: env.sh
t097/: 001.py  002.py  003.py
t100/: server.py
t101/: a.py
t102/: driver.sh  h.py  s.py
t104/: a.py  b.py
t105/: app.py  server.py
t106/: a.py  b.py
t107/: a.py  b.py
t108/: a.py  b.py  comm.py
t110/: pt110.23818  pt110.23819  pt110.23820  pt110.23821  pt110.23822  pt110.23823  pt110.23824  pt110.23825  pt110.23826  pt110.23827  pt110.23828  pt110.23829  pt110.23830  pt110.23831  t110.py
t113/: server.py  wsgi.py
t114/: requirements.txt  server.py  wsgi.py
t115/: requirements.txt  server.py  wsgi.py
t116/: a.py
t117/: deplpynsider.yml  p2.py  p3.py  p4.py  p5.py
t118/: a.py  b.py  c.py  d.py  e.py  f.py  g.py  gg.py  h.py  hh.py  ii.py  jj.py  k.py  kk.py
t119/: a.py
t120/: a.py  b.py  bb.py  c.py  d.py  e.py  ee.py  old.py
t121/: main.go
t122/: a.go  b.go  c.go
t123/: a.go  b.go  c.go
t124/: a  a.go  b  b.go
t125/: a.py  b.py  c.py  d.py  e.py
t127/: main.py
t132/: client.go  server.py
t141/: test.go  test.py  test2.go
t142/: docker-compose.yml
t143/: README.md  client.go  server.go
t146/: Dockerfile_buildstatic  Dockerfile_runstatic  rsync-static  rsyncd.conf
t149/: Skata.java  t149.java
t150/: README.md  docker-compose.yml
t163/: a.go  t163.go
t164/: t164.go
t165/: t165.go
t172/: rand.go  urandom.go
t175/: a.go  b.go  c.go  d.go
t180/: README.md  prob.go  sol-large.go  sol_len.go  sol_len_L_nowait.go  sol_len_XL_nowait.go  sol_len_sel_XL_nowait.go
t181/: README.md  a.go  b.go  c.go  hwh.go
t183/: a.go  b.go
t186/: .gitignore  Makefile  t186.c
t190/: pom.xml
t191/: .project  pom.xml
t192/: .project  README.md  pom.xml
t199/: a.rs  b.rs
t200/: a.rs  b.rs  c.rs  d.rs
t205/: Cargo.toml
t206/: .gitignore  Cargo.toml  README.md
t207/: .gitignore  Cargo.toml
t207/serde2/: Cargo.toml
t207/serde2/src/: main.rs
t207/serde5/: Cargo.toml  serde5.cbor
t207/serde5/src/: main.rs
t208/: Cargo.toml
t209/: Cargo.toml
t209/src/: main.rs
t210/: Cargo.toml
t210/src/: main.rs
t211/: Makefile  thp.c
t212/: Cargo.toml
t214/: Cargo.toml
t214/src/test_a/: main.rs
t214/src/test_b/: main.rs
t215/: Cargo.toml  README.md  build.rs
t215/proto/: echo.proto
t215/src/: client.rs  lib.rs  server.rs
t216/: Cargo.toml
t216/src/dyn_a/: main.rs
t216/src/dyn_b/: main.rs
t216/src/stat_a/: main.rs
t216/src/stat_b/: main.rs
t51/: t51
(+70 files in other folders)
