[package]
name = "t209"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "~0.3"
env_logger = "~0.8"
log = "~0.4"
tokio = { version = "1.2", features = ["full"] }
