[package]
name = "t210"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "~0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.2", features = ["full"] }
