[package]
name = "t215"
version = "0.1.0"
edition = "2021"
publish = false

#[[lib]]
#name = "t215"
#path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1"
futures = { version = "0.3", default-features = false }
#h2 = "0.3"  # just for h2::Error
prost = "0.11"
#prost-types = "0.11"
rand = "0.8"
tokio = { version = "1.24", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.8"
tracing = "0.1"
#tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt"] }

[build-dependencies]
tonic-build = "0.8"
