[package]
name = "t216"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stat_a"
path = "src/stat_a/main.rs"

[[bin]]
name = "dyn_a"
path = "src/dyn_a/main.rs"

[[bin]]
name = "stat_b"
path = "src/stat_b/main.rs"

[[bin]]
name = "dyn_b"
path = "src/dyn_b/main.rs"

[dependencies]
