[package]
name = "serde2"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "*"
ron = "0.6.*"
