[package]
name = "serde5"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = { version = "1.*", features = ["derive"] }
rand = "*"
serde_cbor = "0.11.*"
